MDEV-35213 Server crash or assertion failure upon query with high value of mhnsw_min_limit

mhnsw_min_limit must not be larger than candidates queue size